testdata/golden/sema/valid/module_multifile/alpha.fmt
pragma module;

pub fn alpha(x: int) -> int {
    return x + 1;
}
