testdata/golden/sema/invalid/macro_not_supported.fmt
// Test that macro is rejected as v2+ feature

macro test_macro(x: int) {
    return x * 2;
}
